<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginRight="168dp"
                android:src="@drawable/atras"
                tools:srcCompat="@drawable/atras" />
            <TextView
                android:id="@+id/Tv_Descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:text="@string/Descripcion"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/Tv_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/Nombre_Descripcion"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/Et_Nombre"
                android:background="@drawable/editbackground"
                android:textColorHint="@color/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/Nombre"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Tv_Apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/Apellido_Descripcion"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/Et_Apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/Apellido"
                android:background="@drawable/editbackground"
                android:textColorHint="@color/edittext"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Tv_Cargo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/Cargo"
                android:textSize="15dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >

                <RadioButton
                    android:id="@+id/Radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"

                    android:text="Gerente"></RadioButton>
                <RadioButton
                    android:id="@+id/Radio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Asistente,">
                </RadioButton>
                <RadioButton
                    android:id="@+id/Radio3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Secretaria"
                    />
                <RadioButton
                    android:id="@+id/Radio4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mantenimiento"
                    >
                </RadioButton>
            </RadioGroup>

            <TextView
                android:id="@+id/Tv_Horas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/Horas_Descripcion"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/Et_Horas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/Horas"
                android:background="@drawable/editbackground"
                android:textColorHint="@color/edittext"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/Btn_Salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/primary_dark"
                android:text="Ingresar Empleado" />

            <Button
                android:id="@+id/Btn_Datos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="false"

                android:backgroundTint="@color/primary_dark"
                android:text="Mostrar Datos" />





        </LinearLayout>
    </ScrollView>

</LinearLayout>