<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginRight="168dp"
                android:src="@drawable/atras"
                tools:srcCompat="@drawable/atras" />
            <TextView
                android:id="@+id/Tv_Descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:text="@string/Cuadratico"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="172dp"
                android:layout_height="136dp"
                android:layout_gravity="center"
                android:src="@drawable/formula_general"
                tools:srcCompat="@drawable/formula_general" />

            <TextView
                android:id="@+id/Tv_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/black"
             android:textStyle="bold"
                android:gravity="center"
                android:text="@string/coeficiente_cuadratico"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/Et_CoefiCuadratico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="a"
                android:background="@drawable/editbackground"
                android:textColorHint="@color/edittext"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Tv_Apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"

                android:text="@string/coeficiente_lineal"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/Et_CoefiLineal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="b"
                android:background="@drawable/editbackground"
                android:textColorHint="@color/edittext"
                android:inputType="textPersonName" />



            <TextView
                android:id="@+id/Tv_Horas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/constante"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/Et_Constante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="c"
                android:background="@drawable/editbackground"
                android:textColorHint="@color/edittext"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/Btn_Calcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/primary"
                android:text="@string/calcular" />

            <TextView
                android:id="@+id/Tv_Resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"

                android:textSize="15dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>